# api-tests-pet-project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
api_tests.egg-info/: PKG-INFO  SOURCES.txt
config/: config.py
tests/: conftest.py  test_boundary.py  test_parametrized.py  test_posts.py  test_users.py
utils/: api_client.py  schemas.py
