[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-api-test-framework"
version = "1.0.0"
description = "A lightweight REST API automation framework built with Python, pytest and requests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema==4.23.0",
    "pytest==8.3.4",
    "pytest-html==4.1.1",
    "requests==2.32.3",
]

[tool.setuptools.packages.find]
include = ["config", "utils"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PT", "SIM", "C4", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
